version 2.2.6 (2022-11-14)

New features and changed behaviour
    o static userdist option; linear mask

version 2.2.5 (2022-09-25)

New features and changed behaviour
    o ucare.cjs() restored

Bugs fixed
    o modelAverage.openCR() did not pass arguments to modelAverage.openCRlist()

version 2.2.4 (2022-07-02)

New features and changed behaviour
    o ucare.cjs() temporarily removed (requires R2ucare)

Other
    o vignette - new references and tweaked mention of ucare.cjs ()

version 2.2.3 (2022-07-01)

New features and changed behaviour
    o none

Bugs fixed
    o predict() failed with parameters b & h2 when number of sessions differed 
      among strata
    o derived() not working with stratified model
    o bad names in openCRlist output by par.openCR.fit()
    o dummy variable coding failed with R>4.0

Other
    o fix accidental inclusion of GitHub README
    o depends secr >=4.5.0
    o does not expect R2ucare to be on CRAN

version 2.2.2 (2022-01-17)

New features and changed behaviour
    o modelAverage() method for openCR models
    o openCR() new parameter 'settle' for weighted settlement
    o cumMove() allows settlement to be weighted by 0-1 mask covariate

Bugs fixed
    o expected.d() failed with user-defined movement model

Other
    o Git repository synched with GitHub
    o exampledata folder under inst with some previously fitted models 
      (used in Examples e.g. ?make.kernel)

version 2.2.1 (2021-11-09)

New features and changed behaviour
    o none

Bugs fixed
    o openCR.fit() did not correctly fit non-spatial learned response (b) models 
      such as model = p~b, type = 'JSSAfCL' (bug undetected for some years).

Other
    o tidied C++ code, edited vignette

version 2.2.0 (2021-11-03)

New features and changed behaviour
    o openCR.fit() new defaults: kernelradius = 30, sparsekernel = TRUE
    o plot.kernel() accepts meshcol argument
    o make.kernel() acquires argument 'session' for model input