@@ -2,6 +2,7 @@ version 2.2.6 (2022-11-14)
 
 New features and changed behaviour
     o static userdist option; linear mask
+    o details may include stepmax argument of nlm
 
 version 2.2.5 (2022-09-25)
 
